--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,6 +28,7 @@ jobs:
       uses: actions/upload-artifact@v2.2.3
       with:
         name: Adyanilgen
+        path: home/runner/work/Adyanilgen/Adyanilgen/Adyanilgen/bin/Debug/net5.0/Adyanilgen.dll
     - name: Download a Build Artifact
       uses: actions/download-artifact@v2.0.9
       with:
